# json_benchmarks

./: .gitmodules
benchmarks/: CMakeLists.txt  benchmarks.vcxproj
benchmarks/src/: benchmarks.cpp  benchmarks.hpp  data_generator.cpp  data_generator.hpp  io_device.cpp  io_device.hpp  json_parsing_test_reporter.hpp  main.cpp  measurements.hpp  mmfile.hpp  os_tools.cpp  os_tools.hpp  stringize.hpp
benchmarks/src/tests/: cjson.cpp  cjson.hpp  cjson_tests.cpp  cjson_tests.hpp  flatjson.cpp  flatjson.hpp  flatjson_tests.cpp  flatjson_tests.hpp  json11.cpp  json11.hpp  json11_tests.cpp  json11_tests.hpp  json_benchmarks.hpp  json_spirit.cpp  json_spirit_tests.cpp  jsoncons.cpp  jsoncons.hpp  jsoncons_tests.cpp  jsoncons_tests.hpp  jsoncpp.cpp  jsoncpp.hpp  jsoncpp_tests.cpp  jsoncpp_tests.hpp  nlohmann.cpp  nlohmann_tests.cpp  rapidjson_tests.cpp  simdjson.cpp  simdjson.hpp  taojson.cpp  taojson.hpp  taojson_tests.cpp  yyjson.cpp  yyjson.hpp
parsers/boost_json/: CMakeLists.txt  boost_json_parser.cpp
parsers/json_spirit/: CMakeLists.txt  json_spirit_parser.cpp
parsers/nlohmann/: CMakeLists.txt
parsers/rapidjson/: CMakeLists.txt
parsers/taojson_parser/: CMakeLists.txt
report/: performance.md  performance_fp.md
